kubernetes/02-ollama.yml
apiVersion: v1
kind: Service
metadata:
  name: ollama # The DNS name other pods will use to connect
spec:
  selector:
    app: ollama
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ollama
spec:
  serviceName: "ollama"
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - name: ollama
        image: richardjoseph1/ollama-kube-openwebui:latest
        ports:
        - containerPort: 11434
        volumeMounts:
        - name: ollama-data
          mountPath: /ollama/.ollama
  volumeClaimTemplates: # This connects the pod to the PVC
  - metadata:
      name: ollama-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
