kubernetes/04-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000 # The port the service will listen on
      targetPort: 8080 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: modelmanager-backend
        image: richardjoseph1/modelmanager-backend-kube-openwebui:latest
        ports:
        - containerPort: 8080
