kubernetes/06-ingress-open-webui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-ingress
  annotations:
    # This rewrite rule now only applies to this Ingress
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /webui(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: open-webui
            port:
              number: 8080
